@@ -379,4 +379,14 @@
     a(b)c
     a(b(c)d)e 
 
+/(?P<L1>(?P<L2>0)(?P>L1)|(?P>L2))/
+    0
+    00
+    0000  
+
+/(?P<L1>(?P<L2>0)|(?P>L2)(?P>L1))/
+    0
+    00
+    0000  
+
 /-- End of testinput11 --/
